GUI - Fixed formatting. Changed dialog text. Removed debug statement. ExcelHandler - Implemented write excel file LogicModel - Reformatted. Commentted out debug code.